<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectSetActivity"
    android:background="#e1edf4">

    <LinearLayout
        android:id="@+id/linearSets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="177dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>