...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImportActivity"
    android:background="#e1edf4">

    <Button
        android:id="@+id/fileImportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Import"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
